# backend/app/models/user_profile.rb
@@ -9,9 +9,18 @@ class UserProfile < ApplicationRecord
   has_many :pokemon_teams, class_name: "PokemonTeam", inverse_of: :user_profile,  foreign_key: "user_profile_id"
 
   validates :username, presence: true, uniqueness: true
+
+  validate :username_profanity, on: :create
+
   delegate :pronouns, to: :user
 
   def should_generate_new_friendly_id?
     username_changed?
+  end
+
+  private
+
+  def username_profanity
+    errors.add(:username, "cannot contain profanity") if ProfanityFilter::Base.profane?(username)
   end
 end
